--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
+    <li><a href="#/mapa">Mapa</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
 
