marcadores y ventanas de informacion

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="HomicidiosApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Mapa de Homicidios</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
@@ -20,6 +20,9 @@
   -->
   <script src="../bower_components/angular/angular.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
+  <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
+  <script src="../bower_components/angular-route/angular-route.js"></script>
+
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src='../bower_components/underscore/underscore-min.js'></script>
   <script src='../bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
