--- a/app/index.html
+++ b/app/index.html
@@ -3,23 +3,48 @@
 <head>
   <meta charset="utf-8">
   <title>Mapa de Homicidios</title>
-  <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/mapa">Mapa</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+   <div class="container">
+       <div class="row">
+           <div class="col-md-12">
+               <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                   <div class="container">
+                       <div class="collapse navbar-collapse">
+                           <ul class="nav navbar-nav">
+                               <li><a href="#/mapa">Mapa</a></li>
+                               <li><a href="#/ayuda">Ayuda</a></li>
+                           </ul>
+                       </div>
 
-  <div ng-view></div>
+                   </div>
 
-  <div>Angular seed app: v<span>{{app-version}}</span></div>
+               </nav>
+
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-md-12">
+               <div ng-view></div>
+
+               <div>Mapa del homicidio: v<span>{{app-version}}</span></div>
+           </div>
+       </div>
+
+
+
+   </div>
+
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="../bower_components/angular/angular.js"></script>
-  <script src="../bower_components/angular-route/angular-route.js"></script>
+   <script src='../bower_components/jquery/dist/jquery.min.js'></script>
+
+   <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
 
@@ -31,5 +56,8 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+
+   <script src='../bower_components/bootstrap/js/collapse.js'></script>
+
 </body>
 </html>
