--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="css/app.css"/>
 
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../bower_components/bootstrap-multiselect/css/bootstrap-multiselect.css"/>
+
 
 
 </head>
 <body>
-   <div class="container">
-       <div class="row">
-           <div class="col-md-12">
+   <div class="container-fluid">
+       <!--div class="row">
+           <div class="col-xs-12">
                <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                    <div class="container">
                        <div class="collapse navbar-collapse">
@@ -28,12 +30,12 @@
                </nav>
 
            </div>
-       </div>
+       </div -->
        <div class="row">
-           <div class="col-md-12">
+           <div class="col-xs-12">
                <div ng-view></div>
 
-               <div>Mapa del homicidio: v<span>{{app-version}}</span></div>
+
            </div>
        </div>
 
@@ -47,21 +49,31 @@
   -->
   <script src="../bower_components/angular/angular.js"></script>
    <script src='../bower_components/jquery/dist/jquery.min.js'></script>
-
+   <script src='../bower_components/bootstrap/dist/js/bootstrap.min.js'></script>
    <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
 
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src='../bower_components/underscore/underscore-min.js'></script>
-  <script src='../bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
+   <script src='../bower_components/bootstrap/js/collapse.js'></script>
+
+   <script src='../bower_components/bootstrap-multiselect/js/bootstrap-multiselect.js'></script>
+
+   <script src='../bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 
-  <script src='../bower_components/bootstrap/js/collapse.js'></script>
 
+   <script type="text/javascript">
+       $(document).ready(function() {
+         //  $("#comisaria").multiselect('select', '-1');
+
+       });
+
+   </script>
 </body>
 </html>
